--- a/MMC/protokoll/MMC_protocol_main.tex
+++ b/MMC/protokoll/MMC_protocol_main.tex
@@ -25,6 +25,7 @@
 
 \newcommand{\minipanf}{\begin{minipage}{\linewidth}}
 \newcommand{\minipend}{\end{minipage}}
+\newcommand{\abs}[1]{\ensuremath{\left\vert#1\right\vert}}
 
 \begin{document}
 
