Finished introduction part 1, finished experimental procedure

--- a/MMC/protokoll/MMC_protocol_analysis.tex
+++ b/MMC/protokoll/MMC_protocol_analysis.tex
@@ -87,4 +87,4 @@
     		\end{tabular}
     	\minipend\\
     	\ \\
-    	We prefered the cdf-method to the pdf-method because we can check our result for given $\pi$ just by looking at the histogram without an additional integration. The deviation of the pdf-fit with respect to the histogram is also larger than in the cdf. We could minimise the error $\Delta d$ easily by taking more samples. We also should have avoided motorprotein-trajectories that are too 'short' to minimise the amount of values within the first bin. Also the magnification of the camera could be choosed larger to follow the trajectories better in the software
+    	We prefered the cdf-method to the pdf-method because we can check our result for given $\pi$ just by looking at the histogram without an additional integration. The deviation of the pdf-fit with respect to the histogram is also larger than in the cdf. We could minimise the error $\Delta d$ easily by taking more samples. We also should have avoided motorprotein-trajectories that are too 'short' to minimise the amount of values within the first bin. Also the magnification of the camera could be choosed larger to follow the trajectories better in the software.
