--- a/MMC/protokoll/MMC_protocol_literature.tex
+++ b/MMC/protokoll/MMC_protocol_literature.tex
@@ -1,7 +1,8 @@
 \section{References}
 
 \begin{thebibliography}{99}
-\bibitem [01] {Ramp} Y.Wei; G.Wang: \textit{An Intuitive Discussion on the Ideal Ramp Filter in Computed Tomography}. Iowa, 02/2004 
+\bibitem [01] {PA} S. Diez. \textit{Advanced practical course - Experiment MMC}, Dresden, 2015
 \bibitem [02] {wikiHisto} \texttt{https://en.wikipedia.org/wiki/Histogram} [November 20, 2015]
+\bibitem [03] {wikiKinesin} \texttt{https://en.wikipedia.org/wiki/Kinesin} [November 22, 2015]
 
 \end{thebibliography}
