--- a/MMC/protokoll/MMC_protocol_intro.tex
+++ b/MMC/protokoll/MMC_protocol_intro.tex
@@ -20,3 +20,13 @@
 				 		   	\label{int:kinesin} 
 				\end{figure}\\
 	\subsection{Fluorescence Microscopy}
+       In Flourescence microscopy the emission of light by an marked assay is used. More accurate, an electron in an excited singlet state in an excited orbital in a molecule is paired by the contrary spin to the second electron in the ground-state orbital. The return to the ground state is allowed by spin (pauli principle). This appears rapidly with an emission rate of about $\unit[10^8]{s^{-1}}$ by the emmission of a photon.
+        \subsubsection{Flourescent markers}
+            There are two types of flourescent markers: intrinsic and extrinstic. The intrinsic ones appear naturally in the sample (for example chlorophyll). Extrensic markers are added to the probes, when flourescence does not appear naturally (e.g. flourescein).
+            In a conjugated p-electron-system they have delocalized electrons. In this system, the first excitation energy of the molecule is comparatively low, so it can be stimulated by visible light.
+            In this expermient, microtubules where marked with rhodamine and the motor proteins by green flourescence protein (GFP).
+        \subsubsection{Total internal reflection Flourescence Mircroscopy}
+            Total internal reflection flourescence (TIRF) microscopy is used in this experiment. The base of this methodology is the total internal reflection. It can be detected when a beam of light travels from a medium with high refractive index to a medium with a low one under an angle bigger than the critical angle $\alpha_c$.
+            Even though the beam is totally reflected, a field is generated, which decays exponentially. It reaches typically $\unit[100]{nm}$ into the medium with the lower refractive index.
+            This distance is useful, because it naturally creates a way to limit the volume where flourophores get excited. Instead of the illumination of the whole probe, which would create some noise, lower the contrast between the probes and the background (because the background is also illuminated), it reduces the background illumination and increase the contrast between the assays one wants to see and the background.
+            
