--- a/MMC/protokoll/MMC_protocol_intro.tex
+++ b/MMC/protokoll/MMC_protocol_intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 	\subsection{Kinesin-1: Cell's workhorses}
-		All life forms in our universe are made of cells. To understand the mechanisms in and between those elementary building blocks of life is a real fundamental aim of biology, biochemistry and biophysics. But understanding these tiny but really complex structures also means understanding thousands of finely tuned mechanisms that are essential for survival of a cell. One necessary condition for most of these processes is a \textit{directional} (not statistical!) motion of cell components. For example the segregation of chromosomes during cell division would not work with brownian motion alone.Fortunately there are so called \textit{motor proteins} as kinesin, dynesin and myosin that are responsible for this kind of motion appearing in many transport-mechanisms.\\
+		All life forms in our universe are made of cells. To understand the mechanisms in and between those elementary building blocks of life is a real fundamental aim of biology, biochemistry and biophysics. But understanding these tiny but really complex structures also means understanding thousands of finely tuned mechanisms that are essential for survival of a cell. One necessary condition for most of these processes is a \textit{directional} (not statistical!) motion of cell components. For example the segregation of chromosomes during cell division would not work with brownian motion alone. Fortunately there are so called \textit{motor proteins} as kinesin, dynesin and myosin that are responsible for this kind of motion appearing in many transport-mechanisms.\\
 		In the following experiment we will investigate \textit{kinesin-1}, a motor protein moving along \textit{microtubule} filaments. For that purpose we will measure their velocity and the mean run length. But at first some basic knowledge.\\
 		\ \\
 		\textbf{Microtubules} (MTs) are a component of the cytoskeleton that can be depicted with the "cell's highway" because they form basically the ground where the motorproteins can walk on. Their basic building blocks are the $\alpha-/\beta$-tubulin heterodimers that polymerise longitudinally in an periodic structure with a repeat-length of $8\ \unit{nm}$. They form a structure of hollow-cylinders having an outer diameter of $25\ \unit{nm}$. Because the binding between the subunits is reversible MTs show a highly dynamic growing behavior that is necessary to build those "roads" as flexible as possible. Later we have to surpress this effect. The directed motion on the MTs is enabled by the structural polarity of the tubulin-dimers. Figure \ref{int:MT} shows the strucuture of the MTs.\cite{PA}\\
@@ -11,12 +11,12 @@
 		 		    \caption{Structure of the microtubules\cite{PA}}
 		 		   	\label{int:MT} 
 		\end{figure}\\
-		\textbf{Kinesin-1} is a motor-protein that moves along the MT transporting different types of cargo (e.g. vesicles, mitochrondria, chromosomes) in the cells. It consists of two identical subunits that are winded into each other. For the motion from the minus-end to the plus-end of the MTs it uses the strucutural polarity of the tubulin-subunits binding its motor domain just to the $\beta$-tubulin parts. So it moves in discrete steps of $\Delta x = 8\  \unit{nm}$ exerting a force of $F = 5\ \unit{pN}$ to the MT-surface powered by the hydrolisis of an ATP-molecule during each step. The ATP-hydrolysis leads to an energy-emission of $E_{ATP} = 101 \cdot 10^{-21}\ \unit{J}$ while the motorproteins do a work of $W_{MP} = F \cdot \Delta x = 4 \cdot 10^{-20}$. This means an efficiency of $\eta = W_{MP} / E_{ATP} = 39.60\ \unit{\%}$. The mechanochemical cycle of kinesin-1 is visualised in Figure \ref{int:kinesin}:
+		\textbf{Kinesin-1} is a motor-protein that moves along the MT transporting different types of cargo (e.g. vesicles, mitochrondria, chromosomes) in the cells. It consists of two identical subunits that are winded into each other. For the motion from the minus-end to the plus-end of the MTs it uses the strucutural polarity of the tubulin-subunits binding its motor domain just to the $\beta$-tubulin parts. So it moves in discrete steps of $\Delta x = 8\  \unit{nm}$ exerting a force of $F = 5\ \unit{pN}$ to the MT-surface powered by the hydrolisis of an ATP-molecule during each step. The ATP-hydrolysis leads to an energy-emission of $E_{ATP} = 101 \cdot 10^{-21}\ \unit{J}$ while the motorproteins do a work of $W_{MP} = F \cdot \Delta x = 4 \cdot 10^{-20}\ \unit{J}$. This means an efficiency of $\eta = W_{MP} / E_{ATP} = 39.60\ \unit{\%}$.\cite{PA} The mechanochemical cycle of kinesin-1 is visualised in Figure \ref{int:kinesin}:
 		\begin{figure}[h]
 				 			\centering
 				 		   	\captionsetup{justification=centering}            
 				 		    	  \includegraphics[scale=0.3]{pic/kinesin.png}
-				 		    \caption{Mechanochemical cycle of Kinesin-1:\\ Absorbing of an ATP, Emitting of ADP, ATP Hydrolysis\cite{wikiKinesin}}
+				 		    \caption{Mechanochemical cycle of Kinesin-1:\\ Absorbing of ATP, Emitting of ADP, ATP Hydrolysis\cite{wikiKinesin}}
 				 		   	\label{int:kinesin} 
 				\end{figure}\\
 	\subsection{Fluorescence Microscopy}
