Added a paper to literature and begin discussion

--- a/MMC/protokoll/MMC_protocol_discussion.tex
+++ b/MMC/protokoll/MMC_protocol_discussion.tex
@@ -1,2 +1,8 @@
 \section{Discussion and conclusions}
 %todo discuss 2.2 und 3.1/2 then add appendix 020325
+	In this experiment we quantified the \textit{velocity} $v$ and the characteristic \textit{run length} $d$ (confidence level: $68.27\ \unit{\%}$) of \textit{Kinesin-1 motor proteins} by doing a kinesin-1 stepping assay:	
+	\begin{align*}
+	&v = (0.87 \pm 0.05)\ \unit{\mu m / s}\\
+	&d = (1.1 \pm 0.2)\ \unit{\mu m}
+	\end{align*} 
+	Those results fit good to the values given in literature: $v_{lit} = 0.8\ \unit{\mu m/s}$\cite{PA} and $D_{lit} = 0.8\ \unit{\mu m}$\cite{runLength}.
