--- a/MMC/protokoll/MMC_protocol_literature.tex
+++ b/MMC/protokoll/MMC_protocol_literature.tex
@@ -4,5 +4,6 @@
 \bibitem [01] {PA} S. Diez. \textit{Advanced practical course - Experiment MMC}, Dresden, 2015
 \bibitem [02] {wikiHisto} \texttt{https://en.wikipedia.org/wiki/Histogram} [November 20, 2015]
 \bibitem [03] {wikiKinesin} \texttt{https://en.wikipedia.org/wiki/Kinesin} [November 22, 2015]
+\bibitem [04] {runLength} C.Leduc et al. \textit{Detection of fractional steps in cargo movement by the collective operation of kinesin-1 motors}. Stanford. May 2007
 
 \end{thebibliography}
