Finished discussions, TODO:scalebars

--- a/MMC/protokoll/MMC_protocol_discussion.tex
+++ b/MMC/protokoll/MMC_protocol_discussion.tex
@@ -1,8 +1,8 @@
 \section{Discussion and conclusions}
 %todo discuss 2.2 und 3.1/2 then add appendix 020325
-	In this experiment we quantified the \textit{velocity} $v$ and the characteristic \textit{run length} $d$ (confidence level: $68.27\ \unit{\%}$) of \textit{Kinesin-1 motor proteins} by doing a kinesin-1 stepping assay:	
+	In this experiment we quantified the \textit{velocity} $v$ and the characteristic \textit{run length} $D$ (confidence level: $68.27\ \unit{\%}$) of \textit{Kinesin-1 motor proteins} by doing a kinesin-1 stepping assay:	
 	\begin{align*}
 	&v = (0.87 \pm 0.05)\ \unit{\mu m / s}\\
-	&d = (1.1 \pm 0.2)\ \unit{\mu m}
+	&D = (1.1 \pm 0.2)\ \unit{\mu m}
 	\end{align*} 
-	Those results fit good to the values given in literature: $v_{lit} = 0.8\ \unit{\mu m/s}$\cite{PA} and $D_{lit} = 0.8\ \unit{\mu m}$\cite{runLength}.
+	Those results fit well to the values given in literature: $v_{lit} = 0.8\ \unit{\mu m/s}$\cite{PA} and $D_{lit} = (1.07 \pm 0.03)\ \unit{\mu m}$.\cite{runLength} So one single motorprotein does approximately 137 steps ($8\ \unit{nm}$ each) before releasing itself. Those quantities give an impression of the meaning of Kinesin-1-motors in terms of long-distance-transport in cells: the run length of one single motorprotein is way too short to enable the motion over scales of centimeters or meters that are typical walking distances for the transport of e.g. neurofilaments in the axons of our nervous system. For that reason the molecular motors may transport cargo in a cooperative way: If we consider 8-10 kinesin-1 proteins they would be able to cover distances in macroscopic meter-scales.\cite{severalMP} Because the binding and releasing process to the MTs surface is statistically distributed several proteins have a lower probability of releasing all simultanously, so the run length increases. The velocity of the proteins is influenced by the force imposed by the cargo: the higher the force the lower the velocity. If several motors pull the cargo then those forces distribute uniformely, so the run-velocity has to increase with the number of proteins. The investigation of these dependencies may be the object of further experiments or theoretical models.
