--- a/MMC/protokoll/MMC_protocol_literature.tex
+++ b/MMC/protokoll/MMC_protocol_literature.tex
@@ -4,6 +4,6 @@
 \bibitem [01] {PA} S. Diez. \textit{Advanced practical course - Experiment MMC}, Dresden, 2015
 \bibitem [02] {wikiHisto} \texttt{https://en.wikipedia.org/wiki/Histogram} [November 20, 2015]
 \bibitem [03] {wikiKinesin} \texttt{https://en.wikipedia.org/wiki/Kinesin} [November 22, 2015]
-\bibitem [04] {runLength} C.Leduc et al. \textit{Detection of fractional steps in cargo movement by the collective operation of kinesin-1 motors}. Stanford. May 2007
-
+\bibitem [04] {runLength} S. Ferbrugge et al. \textit{Novel ways to determine kinesin-1's run length and randomness using fluorescence microscopy}. Amsterdam. October 2009
+\bibitem [05] {severalMP} S. Klumpp, R. Lipowsky.\textit{Cooperative cargo transport by several molecular motors}. Potsdam. November 2005
 \end{thebibliography}
