Corrected PET, finished MMC

--- a/MMC/protokoll/MMC_protocol_intro.tex
+++ b/MMC/protokoll/MMC_protocol_intro.tex
@@ -1,9 +1,9 @@
 \section{Introduction}
 	\subsection{Kinesin-1: Cell's workhorses}
-		All life forms in our universe are made of cells. To understand the mechanisms in and between those elementary building blocks of life is a real fundamental aim of biology, biochemistry and biophysics. But understanding these tiny but really complex structures also means understanding thousands of finely tuned mechanisms that are essential for survival of a cell. One necessary condition for most of these processes is a \textit{directional} (not statistical!) motion of cell components. For example the segregation of chromosomes during cell division would not work with brownian motion alone. Fortunately there are so called \textit{motor proteins} as kinesin, dynesin and myosin that are responsible for this kind of motion appearing in many transport-mechanisms.\\
+		All life forms in our universe are made of cells. To understand the mechanisms in and between those elementary building blocks of life is a real fundamental aim of biology, biochemistry and biophysics. But understanding these tiny but really complex structures also means understanding thousands of finely tuned mechanisms that are essential for survival of a cell. One necessary condition for most of these processes is a \textit{directional} (not statistical!) motion of cell components. For example the segregation of chromosomes during cell division would not work with brownian motion alone. Fortunately there are so called \textit{motor proteins} as kinesin, dynesin and myosin that are responsible for these kinds of motion appearing in many transport-mechanisms.\\
 		In the following experiment we will investigate \textit{kinesin-1}, a motor protein moving along \textit{microtubule} filaments. For that purpose we will measure their velocity and the mean run length. But at first some basic knowledge.\\
 		\ \\
-		\textbf{Microtubules} (MTs) are a component of the cytoskeleton that can be depicted with the "cell's highway" because they form basically the ground where the motorproteins can walk on. Their basic building blocks are the $\alpha-/\beta$-tubulin heterodimers that polymerise longitudinally in an periodic structure with a repeat-length of $8\ \unit{nm}$. They form a structure of hollow-cylinders having an outer diameter of $25\ \unit{nm}$. Because the binding between the subunits is reversible MTs show a highly dynamic growing behavior that is necessary to build those "roads" as flexible as possible. Later we have to surpress this effect. The directed motion on the MTs is enabled by the structural polarity of the tubulin-dimers. Figure \ref{int:MT} shows the strucuture of the MTs.\cite{PA}\\
+		\textbf{Microtubules} (MTs) are a component of the cytoskeleton that can be depicted with the "cell's highway" because they form basically the ground where the motorproteins can walk on. Their basic building blocks are the $\alpha-/\beta$-tubulin heterodimers that polymerise longitudinally in a periodic structure with a repeat-length of $8\ \unit{nm}$. They form a structure of hollow-cylinders having an outer diameter of $25\ \unit{nm}$. Because the binding between the subunits is reversible MTs show a highly dynamic growing behavior that is necessary to build those "roads" as flexible as possible. Later we have to surpress this effect. The directed motion on the MTs is enabled by the structural polarity of the tubulin-dimers. Figure \ref{int:MT} shows the strucuture of the MTs.\cite{PA}\\
 		\begin{figure}[h]
 		 			\centering
 		 		   	\captionsetup{justification=raggedright, margin =4cm}            
@@ -20,7 +20,7 @@
 				 		   	\label{int:kinesin} 
 				\end{figure}\\
 	\subsection{Fluorescence Microscopy}
-       In Flourescence microscopy the emission of light by an marked assay is used. More accurate, an electron in an excited singlet state in an excited orbital in a molecule is paired by the contrary spin to the second electron in the ground-state orbital. The return to the ground state is allowed by spin (pauli principle). This appears rapidly with an emission rate of about $\unit[10^8]{s^{-1}}$ by the emmission of a photon.
+       In Flourescence microscopy the emission of light by a marked assay is used. More accurate, an electron in an excited singlet state within a molecule is paired by the contrary spin to the second electron in the ground-state orbital. The return to the ground state is allowed by spin (pauli principle). This appears rapidly with an emission rate of about $\unit[10^8]{s^{-1}}$ by the emission of a photon.
         \subsubsection{Flourescent markers}
             There are two types of flourescent markers: intrinsic and extrinstic. The intrinsic ones appear naturally in the sample (for example chlorophyll). Extrensic markers are added to the probes, when flourescence does not appear naturally (e.g. flourescein).
             In a conjugated p-electron-system they have delocalized electrons. In this system, the first excitation energy of the molecule is comparatively low, so it can be stimulated by visible light.
@@ -28,5 +28,5 @@
         \subsubsection{Total internal reflection Flourescence Mircroscopy}
             Total internal reflection flourescence (TIRF) microscopy is used in this experiment. The base of this methodology is the total internal reflection. It can be detected when a beam of light travels from a medium with high refractive index to a medium with a low one under an angle bigger than the critical angle $\alpha_c$.
             Even though the beam is totally reflected, a field is generated, which decays exponentially. It reaches typically $\unit[100]{nm}$ into the medium with the lower refractive index.
-            This distance is useful, because it naturally creates a way to limit the volume where flourophores get excited. Instead of the illumination of the whole probe, which would create some noise, lower the contrast between the probes and the background (because the background is also illuminated), it reduces the background illumination and increase the contrast between the assays one wants to see and the background.
+            This distance is useful, because it naturally creates a way to limit the volume where flourophores get excited. In this way the noise lowering the contrast between the signals and the background is surpressed.
             
