--- a/PET/Protokoll/PET_Protokoll_ausw.tex
+++ b/PET/Protokoll/PET_Protokoll_ausw.tex
@@ -16,8 +16,7 @@ den Prozess erkennen, der neben dem $\beta+$-Zerfall stattfindet. Über die erha
 kann man weitere Eigenschaften der Detektoren bestimmten und den Abstand der beiden Detektoren voneinander zu bestimmen, sowie ein Gefühl für die Arbeitsweise
 und die Messdaten der Detektoren zu erhalten. ($\varepsilon_A = \unit[(46\pm 3)]{\%},\ \varepsilon_B = \unit[(54\pm 3)]{\%}, \ L = (46,5\pm4,3)\unit{cm}$)
 Dabei sind die Daten, welche aus Fits eines Datenanalysetools extrahiert wurden, alle mit Fehlern behaftet. Die Software selbst berechnet die Fehler dabei so, dass
-sie möglichst klein sind und gegenüber der Größe auch tatsächlich vernachlässigbar scheinen. Nach einigen Tests von verschiedenen Funktionen in der Software QtiPlot
-kann davon ausgegangen werden, dass die Fit-Funktionen solcher Software wesentlich fehlerbehafteter sind als hier für die Berechnung angenommen wurde.\\
+sie möglichst klein sind und gegenüber der Größe auch tatsächlich vernachlässigbar scheinen.\\
 Nach der Kalibrierung erfolgt der Hauptversuch: Es wird eine unbekannte Quellverteilung vermessen. Später wird die Wirkung unterschiedlicher Filter auf diese Messung untersucht
 Es zeigt sich, dass die gegebenen Filter unterschiedliche Qualitäten haben. So zeigen sich Unterschiede in puncto Schärfe, Kontrast und Rauscheffekte, sowohl über das Bild als auch direkt an den Quellen.
 Von Interesse ist hier auch das Sinogramm, welches bei mehreren Quellen auch mehrere Streifen zeigt. 
