--- a/PET/Protokoll/PET_Protokoll_phys.tex
+++ b/PET/Protokoll/PET_Protokoll_phys.tex
@@ -1,6 +1,6 @@
 \section{Physikalische Grundlagen}
 \subsection{Grundkonzept eines PET-Scanners}
-	Die \textbf{Positronen-Emissions-Tomographie} ist ein bildgebendes Verfahren zur in vivo-Bechreibung von biochemischen und physiologischen Prozessen. Sie ist dadurch ein Beispiel für ein \textbf{funktionelles} Bildgebungsverfahren, das dazu dient, um Stoffwechselprozesse und Blutflüsse im menschlichen Körper zu überwachen, ohne dabei chirurgische Maßnahmen in Erwägung ziehen zu müssen. Dem Patientien wird dabei ein $\beta^+$-Strahler (ein sogenannter \textbf{Tracer}) mit einer Halbwertszeit in der Dimension von mehreren Minuten bis Stunden, welcher den physiologischen Vorgang im Körper begleitet und sich in bestimmten Strukturen anreichert. Die Tracer haben einen Protonenüberschuss, wodurch in Atomkernen der Tranceratome folgende Kernreaktion stattfindet: 
+	Die \textbf{Positronen-Emissions-Tomographie} ist ein bildgebendes Verfahren zur in vivo-Beschreibung von biochemischen und physiologischen Prozessen. Sie ist dadurch ein Beispiel für ein \textbf{funktionelles} Bildgebungsverfahren, das dazu dient, um Stoffwechselprozesse und Blutflüsse im menschlichen Körper zu überwachen, ohne dabei chirurgische Maßnahmen in Erwägung ziehen zu müssen. Dem Patientien wird dabei ein $\beta^+$-Strahler (ein sogenannter \textbf{Tracer}) verabreicht mit einer Halbwertszeit in der Dimension von mehreren Minuten bis Stunden, welcher den physiologischen Vorgang im Körper begleitet und sich in bestimmten Strukturen anreichert. Die Tracer haben einen Protonenüberschuss, wodurch in Atomkernen der Tranceratome folgende Kernreaktion stattfindet: 
 	\begin{equation*}
 	p^+ \longrightarrow n + e^+ + \nu_e
 	\end{equation*}\\
@@ -8,7 +8,7 @@
 	\begin{equation*}
 		e^+ e^- \longrightarrow \gamma \gamma
 	\end{equation*}
-	Im Schwerpunktsystem des Lepton-Antilepton-Paares stehen die Impulse kollinear, wodurch der Gesamtimpuls verschwindet. Aufgrund der Viererimpulserhaltung muss auch der Impuls des entstandenen Photonenpaares verschwindet, wodurch sich in etwa ein 180° Winkel zwischen ihnen ergibt und ihre Energie unter Vernachlässigung der kinetischen Energie der einfallenden Teilchen ungefähr gleich der Summe der Ruheenergien des Elektron-Positron-Paares ist, d.h. $E_{\gamma_1} = E_{\gamma_2} \approx 511\ \unit{keV}$. Das ist auch der Energiewert, bei dem wir später der Peak des Energiespektrums erwarten. Hieraus können wir ein Kriterium für die Wahl eines geeigneten Tracers ableiten: Je geringer die maximale Energie des emittierten Positrons, desto geringer ist die Entfernung des Annihilationsort vom Emissionsort und desto geringer sind die Abweichungen des 180°-Winkels und des Energiepeaks der Photonen. Dadurch werden Fehlerquellen bei der Lokalisierung des Tracers minimiert.\\
+	Im Schwerpunktsystem des Lepton-Antilepton-Paares stehen die Impulse kollinear, wodurch der Gesamtimpuls verschwindet. Aufgrund der Viererimpulserhaltung muss auch der Impuls des entstandenen Photonenpaares verschwinden, wodurch sich ein 180° Winkel zwischen ihnen ergibt und ihre Energie unter Vernachlässigung der kinetischen Energie der einfallenden Teilchen ungefähr gleich der Summe der Ruheenergien des Elektron-Positron-Paares ist, d.h. $E_{\gamma_1} = E_{\gamma_2} \approx 511\ \unit{keV}$. Das ist auch der Energiewert, bei dem wir später den Peak des Energiespektrums erwarten. Die Reichweite der entstandenen Photonen im umgebenden Material steigt mit ihrer Energie. Hieraus können wir ein Kriterium für die Wahl eines geeigneten Tracers ableiten: Je geringer die maximale Energie des emittierten Positrons, desto geringer ist die Entfernung des Annihilationsort vom Emissionsort und desto geringer sind die Abweichungen des 180°-Winkels im Laborsystem und des Energiepeaks der Photonen. Dadurch werden Fehlerquellen bei der Lokalisierung des Tracers minimiert.\\
 	
 	\minipanf
 		\begin{center}
@@ -19,7 +19,14 @@
 	\minipend 
 	\hspace{3mm}
 	\ \\	
-	Die beiden Annihilationsphotonen der (ausgedehnten) Quellverteilung werden anschließend von zwei gegenüberliegenden Detektoren registriert. Dadurch erhalten wir die auf der Verbindungslinie integrierte (\textbf{Radon-Transformierte}) Aktivitätsverteilung, indem wir die Detektoren nun unter verschiedenen Winkeln um die Quellen rotieren. Mit Hilfe dieser Daten kann die Ausgangsverteilung über eine inverse Koordinaten-Transformation rekonstruiert werden.\cite{PA}	
+	Die beiden Annihilationsphotonen der (ausgedehnten) Quellverteilung $f(x,y)$ werden anschließend von zwei gegenüberliegenden Detektoren registriert, die eine bestimmte Strecke(beschrieben durch Ortskoordinate $s$) um die Quellverteilung abfahren. Dadurch erhalten wir die auf der Verbindungslinie integrierte (\textit{Radon-Transformierte}) Aktivitätsverteilung, das sogenannte \textbf{Sinogramm $p(s,\theta)$}, indem wir die Detektoren nun unter verschiedenen Winkeln $\theta$ um die Quellen rotieren. Mit Hilfe dieser Daten kann die Ausgangsverteilung über das sogenannte \textbf{Fourier-Scheiben-Theorem} rekonstruiert werden. Dieses besagt, dass die Fouriertransformierte des Sinogramms bezüglich $s$ $FT_s[p(\cdot,\theta)](S)\equiv P(S,\theta)$ einem Nullpunktstrahl $S$, mit gleichem Anstieg wie $s$ im Ortsraum, der zweidimensionalen Fouriertransformation der ursprunglichen Verteilung $FT_{xy}[f] (k_x, k_y)\equiv F(k_x,k_y)$. Gleichung (\ref{p:fst}) repräsentiert diesen Zusammenhang:
+	\begin{equation}\label{p:fst}
+		P(S,\theta) = F(S\cdot \cos\theta, S\cdot \sin\theta)
+	\end{equation}
+	Die ursprüngliche Verteilung erhalten wir nun durch eine inverse Fourier-Transformation:
+	\begin{equation*}
+		f(x,y) = FT^{-1}_{xy}[FT_{xy}[f]](x,y) =  FT^{-1}_{xy}[P](x,y)
+	\end{equation*}	
 	
 \subsection{Koinzidenzmessungen}
 	Da die gleichzeitig emittierten, also zeitlich korrelierten, Photonen in zwei verschiedenen Detektoren registriert werden, zwischen den zwei Zählsignalen aber immer eine gewisse Zeitdifferenz $\Delta t(1,2)$ existieren wird, definiert man das \textbf{Koinzidenzzeitfenster} $[\Delta t_{min}, \Delta t_{max}]$ als Intervall von Zeitdifferenzen zwischen zwei Messereignissen 1 und 2, die man noch als zeitlich korrelierte Ereignisse akzeptiert, d.h. Messereignis 1 und 2 sind (im Idealfall) zeitlich korreliert genau dann wenn: $\Delta t(1,2) \in [\Delta t_{min}, \Delta t_{max}]$. Diese Ereignisse nennt man \textbf{wahre Koinzidenzen} Die Länge des intervalls nennt man \textbf{Koinzidenzauflösungszeit}. Das Zeitintervall wird durch die Kalibrationsmessung im ersten experimentellen Teil durch Erstellen eines Histogramms von Zeitunterschieden bestimmt. Leider werden in der Praxis durch dieses Zeitfenster auch Ereignisse nachgewiesen, die physikalisch nicht korreliert sind. Diese nennt man \textbf{zufällige Koinzidenzen} und sie gilt es herauszufiltern.\cite{PA} Dies wird näher in Abschnitt (\ref{dft:kalib_mitte}) diskutiert.
@@ -40,7 +47,7 @@
 
 		
 \subsubsection{Modifiziertes Anger-Prinzip}
-	Würde man die Szintillator-Kristalle einzeln an Photomultiplier koppel, würde das örtliche Auflösungsvermögen der Messapperatur von der Größe der Multiplier begrenzt werden. Da diese aber technisch nicht beliebig klein konstruiert werden können, koppelt man mehrere Szintillatoreinheiten an einen Multiplier, indem man den Kristall durch unterschiedlich tiefe Einschnitte in eine Matrix einteilt. Im konkreten Experiment wurden 4 Photomultiplier mit einer 8x8-Szintillator-Matrix verbunden. Mit Hilfe der Einschnitte gelangen die entstehenden Sekundärphotonen über totale Reflexion auf mehrere Multiplier, an denen sie einen Stromimpuls mit einer Amplitude $A_i$ erzeugen. Die im Detektor deponierte Energie des einfallenden Photons ist dabei proportional zur Summe aus allen Stromamplituden. \\
+	Würde man die Szintillator-Kristalle einzeln an Photomultiplier koppelt, würde das örtliche Auflösungsvermögen der Messapperatur von der Größe der Multiplier begrenzt werden. Da diese aber technisch nicht beliebig klein konstruiert werden können, koppelt man mehrere Szintillatoreinheiten an einen Multiplier, indem man den Kristall durch unterschiedlich tiefe Einschnitte in eine Matrix einteilt. Im konkreten Experiment wurden 4 Photomultiplier mit einer 8x8-Szintillator-Matrix verbunden. Mit Hilfe der Einschnitte gelangen die entstehenden Sekundärphotonen über totale Reflexion auf mehrere Multiplier, an denen sie einen Stromimpuls mit einer Amplitude $A_i$ erzeugen. Die im Detektor deponierte Energie des einfallenden Photons ist dabei proportional zur Summe aus allen Stromamplituden. \\
 	
 	\minipanf
 					\begin{center}
